@@ -1,3 +1,11 @@
+2001-12-11  Mark Mitchell  <mark@codesourcery.com>
+
+	* Makefile.in (SCRIPTS): Generate files with DOS line-ending
+	convention under Windows.
+	* doc/manual/introduction.xml: Expand.
+	* doc/manual/test-tour.xml: Explain that Cygwin will not work with
+	QMTest.
+
 2001-12-10  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/attachment.py (TemporaryAttachmentStore.HandleUploadRequest):
